src/objects/CLM_CBT_CT_Code_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>CLM_CBT_CT_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBT CT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_L_C_Queue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L&amp;C Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_L_C_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L&amp;C User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CBT_CT_Code_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CBT CT Code Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLM_L_C_User__c</columns>
        <columns>CLM_L_C_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CLM_CBT_CT_Code_List</fullName>
        <columns>NAME</columns>
        <columns>CLM_CBT_CT_Code__c</columns>
        <columns>CLM_L_C_Queue__c</columns>
        <columns>CLM_L_C_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>CLM CBT CT Code List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CBT CT Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBT CT Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>